second commit add login and change index.html

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
             <a>เกี่ยวกับเรา</a>
             <a href="#table">ราคา ซื้อขาย - ขายของเก่า</a>
             <a>ข่าวสารและกิจกรรม</a>
+            <a href="login.html">💂‍♀️💂‍♂️</a>
         </nav>
     </header>
     <div class="body1">
         <div class="form-box login">
             <h2>Find Garbage Plant Near You</h2>
             <div class="btn1">
-                <button class="btnfind"><h4>Find Them</h4></button>
+                <button class="btnfind" type="button" 
+                onclick="window.location.href='https://www.google.com/maps/@13.7348723,100.7887237,15z?authuser=0;'">
+                    <h4>Find Them</h4>
+                </button>
             </div>
         </div>
     </div>
