third commit login update and Register

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                     <h4>Find Them</h4>
                 </button>
             </div>
+            <div class="btn1">
+                <button class="btnfind" type="button" 
+                onclick="window.location.href='sellpage.html'">
+                    <h4>Sell Trash</h4>
+                </button>
+            </div>
         </div>
     </div>
     <div id="table">
