--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="register.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,34 +20,48 @@
     <div class="body1">
         <div class="box-login">
             <form action="">
-                <h2 class="login-logo">Login</h2>
+                <h2 class="login-logo">Register</h2>
                 <div class="input-form">
                     <span class="icon-login"><ion-icon name="mail"></ion-icon></span>
                     <input type="email" required class="email"/>
                     <label>Email</label>
                 </div>
                 <div class="input-form">
-                    <span class="icon-login"><ion-icon name="key"></ion-icon></span>
-                    <input type="password" required/>
+                    <span class="icon-login"
+                    type="checkbox" onclick="myFunction()"
+                    >
+                        <ion-icon name="eye"></ion-icon>
+                    </span>
+                    <input type="password" required id="myInput"/>
                     <label>Password</label>
+                </div>
+                <div class="input-form">
+                    <span class="icon-login"
+                    type="checkbox" onclick="myFunction1()"
+                    >
+                        <ion-icon name="eye"></ion-icon>
+                    </span>
+                    <input type="password" required id="myInput1"/>
+                    <label>ConfirmPassword</label>
                 </div>
                 <div class="btnlogin">
                     <button type="button" 
                     onclick="window.location.href='https://www.google.com'">
-                    Login</button>
+                    Register</button>
                 </div>
                 <div class="textlogin">
                     <input type="checkbox" required/>
-                    <span>Remember me </span><a href="#">You Forgot password?</a>
+                    <span>Remember me </span>
+                    <a href="#"> Forgot password?</a>
                 </div>
                 <div class="textlogin">
-                    <span>You Don't have a account </span><a href="register.html">Register</a>
+                    <span>You have a account </span>
+                    <a href="login.html"> Login</a>
                 </div>
             </form>
         </div>
         
     </div>
-
 
     <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
