forucommit add and update sellpage

--- a/sellpage.html
+++ b/sellpage.html
@@ -17,6 +17,92 @@
             <a href="login.html">💂‍♀️💂‍♂️</a>
         </nav>
     </header>
-    
+    <div class="wrapper">
+        <div class="sell-box">
+            <h2>รายการขายสินค้า</h2>
+            <div class="table-1" overflow-y: scroll>
+                <!-- <label>ขวดพลาสติก</label> -->
+                <table>
+                    <tr>
+                        <th>ชนิดขยะ</th>
+                        <th>ราคาขยะต่อกิโลกรัม</th>
+                        <th></th>
+                        <th>จำนวน</th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    <tr>
+                        <td>ขวดพลาสติก</td>
+                        <td> 255 บาท</td>
+                        <td><button type="button">-</button></td>
+                        <td>0</td>
+                        <td><button type="button">+</button></td>
+                    </tr>
+                    
+                </table>
+            </div>
+            <div class="price">
+                <h2>ราคารวม: 000</h2>
+            </div>
+            <div class="btn-sell">
+                <button type="button">sell</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
