--- a/login.html
+++ b/login.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="311924303771-eajtggvob2tpvr970et00bd5coi5ii73.apps.googleusercontent.com">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
-    <title>Document</title>
+    <title>login with google</title>
 </head>
 <body>
     <header>
@@ -36,6 +38,11 @@
                     onclick="window.location.href='https://www.google.com'">
                     Login</button>
                 </div>
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
+                <script src="login.js"></script>
+                <script src="https://apis.google.com/js/platform.js" async defer></script>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
                 <div class="textlogin">
                     <input type="checkbox" required/>
                     <span>Remember me </span><a href="#">You Forgot password?</a>
